thu5apr - add ex02

--- a/01_dockerfiles/ex02/Dockerfile
+++ b/01_dockerfiles/ex02/Dockerfile
@@ -1,9 +1,12 @@
 FROM ruby
 
 RUN apt-get update \
-	&& apt-get install -y nodejs ruby
-	&& gem update \
-	&& gem install rails \
+	&& apt-get install -y nodejs \
+	&& gem install rails
 
-
-CMD
+ONBUILD COPY . /opt/app
+ONBUILD WORKDIR /opt/app
+ONBUILD RUN bundle install
+ONBUILD RUN rails db:migrate
+ONBUILD RUN rails db:setup
+ONBUILD RUN rails db:seed
