mon9apr - fix 01/02 after tests

--- a/01_dockerfiles/ex02/Dockerfile
+++ b/01_dockerfiles/ex02/Dockerfile
@@ -4,9 +4,10 @@ RUN apt-get update \
 	&& apt-get install -y nodejs \
 	&& gem install rails
 
-ONBUILD COPY . /opt/app
+ONBUILD COPY . ./opt/app
 ONBUILD WORKDIR /opt/app
+
 ONBUILD RUN bundle install
 ONBUILD RUN rails db:migrate
-ONBUILD RUN rails db:setup
-ONBUILD RUN rails db:seed
+ONBUILD RUN rake db:setup
+ONBUILD RUN rake db:seed
