--- a/01_dockerfiles/ex01/Dockerfile
+++ b/01_dockerfiles/ex01/Dockerfile
@@ -5,11 +5,12 @@ RUN apt update \
 	&& wget http://dl.4players.de/ts/releases/3.1.1/teamspeak3-server_linux_amd64-3.1.1.tar.bz2 \
 	&& tar xjf teamspeak3-server_linux_amd64-3.1.1.tar.bz2 \
 	&& cd teamspeak3-server_linux_amd64 \
-	&& export TS3SERVER_LICENSE=accept
 
 # Expose the Standard TS3 port, for files, for serverquery
 EXPOSE 9987/udp 30033 10011
 
+ENV TS3SERVER_LICENSE=accept
+
 WORKDIR ./teamspeak3-server_linux_amd64
 
-CMD ["sh"] ["ts3server_minimal_runscript.sh"]
+CMD ["sh", "ts3server_minimal_runscript.sh"]
